--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,8 @@
         "span": "cpp",
         "stack": "cpp",
         "unordered_set": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "memory_resource": "cpp"
     },
     "editor.wordWrapColumn": 160,
     "editor.wordWrap": "wordWrapColumn"
