Q2 study - C12x4 @6GeV NO cuts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "DetectorSimulationAnalyser.C": "cpp"
+        "DetectorSimulationAnalyser.C": "cpp",
+        "new": "cpp"
     }
 }
