--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "dataanalyser.cpp": "c",
+        "truthlevelanalyser.c": "cpp"
     }
 }
