uniform 2GeV 10M full chainRun AMaps v2 run 1 NO CUTS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,8 @@
         "vector": "cpp",
         "algorithm": "cpp",
         "dataanalyser.cpp": "c",
-        "truthlevelanalyser.c": "cpp"
+        "truthlevelanalyser.c": "cpp",
+        "memory": "cpp",
+        "print": "cpp"
     }
 }
