--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "dataanalyser.cpp": "c",
         "truthlevelanalyser.c": "cpp",
         "memory": "cpp",
-        "print": "cpp"
+        "print": "cpp",
+        "process_events.C": "cpp"
     }
 }
